# wordle-rs

./: Cargo.toml  README.md  cspell.json
src/: main.rs  manager.rs  save.rs  stats.rs  widget.rs  wordle.rs
